RESOLVED FIXED305066
REGRESSION(294844@main): svg/filters/feTile.svg is broken
https://bugs.webkit.org/show_bug.cgi?id=305066
Summary REGRESSION(294844@main): svg/filters/feTile.svg is broken
Nikolas Zimmermann
Reported 2026-01-07 13:30:08 PST
See screenshot, Chrome on top, Safari at bottom. The Safari rendering looks too "lite".
Attachments
Screenshot (239.54 KB, image/png)
2026-01-08 06:34 PST, Nikolas Zimmermann
no flags
Nikolas Zimmermann
Comment 1 2026-01-08 06:34:09 PST
Created attachment 477932 [details] Screenshot
Alexey Proskuryakov
Comment 2 2026-01-08 09:25:55 PST
This test passes on bots, and LayoutTests/svg/filters/feTile-expected.txt was last modified in 2012. I can reproduce the test rendering differently in Safari and Chrome indeed. Could you please clarify when this regressed, was there a version where it worked properly?
Said Abou-Hallawa
Comment 3 2026-01-08 12:01:56 PST
This is regression of 294844@main. It is related to drawing gradient with linearSRGB color space.
Radar WebKit Bug Importer
Comment 4 2026-01-08 12:02:03 PST
Said Abou-Hallawa
Comment 5 2026-01-15 09:51:17 PST
*** Bug 305065 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 6 2026-01-16 11:53:41 PST
pascoe@apple.com
Comment 7 2026-03-09 22:05:31 PDT
Simon Fraser (smfr)
Comment 8 2026-03-10 15:11:30 PDT
EWS
Comment 9 2026-03-11 08:41:21 PDT
Committed 309060@main (cfa5a1badcde): <https://commits.webkit.org/309060@main> Reviewed commits have been landed. Closing PR #56730 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.