REGRESSION(294844@main): svg/filters/feTile.svg is broken https://bugs.webkit.org/show_bug.cgi?id=305066 rdar://167786547

Reviewed by NOBODY (OOPS!).

After 294844@main we convert gradient colorstop colors into the destination
colorspace as a performance optimization, so we don't have to run colorspace
conversion on every paint. That means that interpolation happens between
the converted colors, but generally the destination colorspace (a display
colorspace) is close to sRGB.

However, if the destination colorspace is linearRGB, as it is for SVG
filters, then the interpolation gives quite different results. So disable
this optimization in that case.

Test: svg/filters/gradient-colorspace.html

* LayoutTests/svg/filters/gradient-colorspace-expected.html: Added.
* LayoutTests/svg/filters/gradient-colorspace.html: Added.
* Source/WebCore/platform/graphics/cg/GradientCG.cpp:
(WebCore::Gradient::paint):