Source/WebCore/platform/graphics/Gradient.h
@@ -116,9 +116,7 @@ public:
 
 #if USE(CG)
     void paint(GraphicsContext&);
-    // If the DestinationColorSpace is present, the gradient may cache a platform renderer using colors converted into this colorspace,
-    // which can be more efficient to render since it avoids colorspace conversions when lower level frameworks render the gradient.
-    void paint(CGContextRef, std::optional<DestinationColorSpace> = { });
+    void paint(CGContextRef);
 #endif
 
 #if USE(SKIA)
